gitops/base/backend.yml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      containers:
        - name: api
          image: amitchoudhary47/devops-backend:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
---
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops
  labels:
    app: backend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
